title spacing fix and "narrador" id fix

--- a/css/print.css
+++ b/css/print.css
@@ -23,8 +23,10 @@
 
     main h2 {
         font-size: 3rem;
+        margin-top: 1.5rem;
     }
     #qr h2 {
         font-size: 3rem;
+        margin-top: 1.5rem;
     }
 }
